[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Static/Shadows_dynamic.png" type="Texture" id=1]
[ext_resource path="res://Assets/Dojo.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Buttons/Button_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Main_menu.gd" type="Script" id=4]
[ext_resource path="res://UI/Buttons/Button_exit.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dojo" parent="." instance=ExtResource( 2 )]

[node name="Shadows_dynamic" type="Sprite" parent="Dojo"]
position = Vector2( 200, 150 )
texture = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 150.0
margin_top = 134.566
margin_right = 264.078
margin_bottom = 190.566
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 114.0
margin_bottom = 44.0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 82.0
margin_bottom = 44.0

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_right = 82.0
text = "New Game"
scene_to_load = "res://Levels/World.tscn"

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Exit"
scene_to_load = "exit"
